# frame-01

./: README.md  biome.jsonc  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: automerge.yml
src/: App.tsx  main.css  main.tsx  router.tsx  wdyr.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  setup.rs
src-tauri/src/commands/: window.rs
src/app/: providers.tsx
src/components/ui/: multi-border.tsx
src/components/window/: icons-control.tsx  window-controls.tsx
src/core/tauri/: invoke.ts  window.ts
src/routes/: __root.tsx  index.tsx
